--- a/.github/workflows/build-deb.yml
+++ b/.github/workflows/build-deb.yml
@@ -20,7 +20,12 @@ jobs:
     - name: 🧰 Install dependencies
       run: |
         sudo apt update
-        sudo apt install -y fakeroot dpkg-dev xz-utils
+        sudo apt install -y \
+          fakeroot \
+          dpkg-dev \
+          gnupg \
+          wget \
+          xz-utils
 
     - name: 🔐 Fix permissions
       run: |
